--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -38,18 +38,20 @@
 			</nav>
 			<section>
 				<div class="container content">
-					<div class="row content-margin_reduction">
-						<div class="col-md-12">
-							<div class="text-center content-intro">
-								<h1>Marcin Koczorowski</h1>
-								<h2>Junior Front - End Developer</h2>
-							</div>
-							<div class="text-center content-styles-2">			
-								<h2><q>If You know You can do better, then do better</q></h2>
+					<header>
+						<div class="row content-margin_reduction">
+							<div class="col-md-12">
+								<div class="text-center content-intro">
+									<h1>Marcin Koczorowski</h1>
+									<h2>Junior Front - End Developer</h2>
+								</div>
+								<div class="text-center content-styles-2">			
+									<h2><q>If You know You can do better, then do better</q></h2>
+								</div>
 							</div>
 						</div>
-					</div>
-				<div class="row content-margin_reduction buttons">
+					</header>
+					<div class="row content-margin_reduction buttons">
 						<div class="text-center">
 							<div class="col-md-12">
 								<a href="#"><button id="button" type="button" class="btn buttons-styles"><span>See more</span></button></a>
@@ -62,7 +64,9 @@
 			<section class="projects" id="projects">
 				<div class="row projects_styles">
 					<div class="col-md-12 projects__title">
-						<h2>projects</h2>
+						<header>
+							<h2>projects</h2>
+						</header>
 					</div>
 				</div>
 
@@ -125,16 +129,20 @@
 			<section class="aboutMe" id="about">
 				<div class="row aboutMe-margin_reduction">
 					<div class="aboutMe-content">
-						<div class="sub">About me<span class="arch"></span></div>
-						<p>My name is Marcin Koczorowski</p>
+						<header>
+							<div class="sub">About me<span class="arch"></span></div>
+						</header>
+						<article>
+							<p>My name is Marcin Koczorowski</p>
 
-						<p>I am student of the Information Technology faculty at the Collegium Da Vinci in Poznań.</p>
+							<p>I am student of the Information Technology faculty at the Collegium Da Vinci in Poznań.</p>
 
-						<p>I am passionate about programming of web applications, I focusing mainly on study AngularJS framework. My target is to become a professional programer.</p>
+							<p>I am passionate about programming of web applications, I focusing mainly on study AngularJS framework. My target is to become a professional programer.</p>
 
-						<p>I know english in comunicative level. Between 2014 - 2016 I cooperated with contractors from aboard. I have an experience as a coach because I was responible for training new people employed to the company I worked in.</p>
+							<p>I know english in comunicative level. Between 2014 - 2016 I cooperated with contractors from aboard. I have an experience as a coach because I was responible for training new people employed to the company I worked in.</p>
 
-						<p>I am open for relocation and business trips.</p>
+							<p>I am open for relocation and business trips.</p>
+						</article>
 					</div>
 				</div>
 			</section>
@@ -143,7 +151,9 @@
 				<div class="row skills-margin_reduction">
 					<div class="col-md-12 skills-title">
 						<div class="text-center">
-							<h2>skills</h2>
+							<header>
+								<h2>skills</h2>
+							</header>
 						</div>
 					</div>
 				</div>
@@ -167,78 +177,102 @@
 				</div>
 				<div class="row skills-margin_reduction">
 					<div class="text-center skills-header-technologies">
-						<h2>What kind of technologies can I use?</h2>
+						<h2>What kind of technologies I use?</h2>
 					</div>
 					<div class="skills-images">
-						<div class="col-md-3 col-sm-3 col-xs-6 skills-images_technologies">
-							<div class="text-center">
-								<img src="img/html.png" alt="html logo">
+						<figure>
+							<div class="col-md-3 col-sm-3 col-xs-6 skills-images_technologies">
+								<div class="text-center">
+									<img src="img/html.png" alt="html logo">
+								</div>
 							</div>
-						</div>
-						<div class="col-md-3 col-sm-3 col-xs-6 skills-images_technologies">
-							<div class="text-center">
-								<img src="img/css.png" alt="css logo">
+						</figure>
+						<figure>
+							<div class="col-md-3 col-sm-3 col-xs-6 skills-images_technologies">
+								<div class="text-center">
+									<img src="img/css.png" alt="css logo">
+								</div>
 							</div>
-						</div>
-						<div class="col-md-3 col-sm-3 col-xs-6 skills-images_technologies">
-							<div class="text-center">
-								<img src="img/js.png" alt="js logo">
+						</figure>
+						<figure>
+							<div class="col-md-3 col-sm-3 col-xs-6 skills-images_technologies">
+								<div class="text-center">
+									<img src="img/js.png" alt="js logo">
+								</div>
 							</div>
-						</div>
-						<div class="col-md-3 col-sm-3 col-xs-6 skills-images_technologies">
-							<div class="text-center">
-								<img src="img/bootstrap2.png" alt="bootstrap logo">
+						</figure>
+						<figure>
+							<div class="col-md-3 col-sm-3 col-xs-6 skills-images_technologies">
+								<div class="text-center">
+									<img src="img/bootstrap2.png" alt="bootstrap logo">
+								</div>
 							</div>
-						</div>
+						</figure>					
 					</div>
 				</div>
 				<div class="skills-images">
+					<figure>
 						<div class="col-md-3 col-sm-3 col-xs-6 skills-images_technologies">
 							<div class="text-center">
 								<img src="img/jquery.png" alt="jquery logo">
 							</div>
 						</div>
+					</figure>
+					<figure>
 						<div class="col-md-3 col-sm-3 col-xs-6 skills-images_technologies">
 							<div class="text-center">
 								<img src="img/angular.png" alt="angular logo">
 							</div>
 						</div>
+					</figure>
+					<figure>
 						<div class="col-md-3 col-sm-3 col-xs-6 skills-images_technologies">
 							<div class="text-center">
 								<img src="img/git.png" alt="git logo">
 							</div>
 						</div>
+					</figure>
+					<figure>
 						<div class="col-md-3 col-sm-3 col-xs-6 skills-images_technologies">
 							<div class="text-center">
 								<img src="img/sass.png" alt="sass logo">
 							</div>
 						</div>
-					</div>
+					</figure>
+				</div>
 				<div class="row skills-margin_reduction">
 					<div class="col-md-12 skills-images2">	
 						<div class="text-center skills-header-tools">
-							<h2>What kind of tools can I use?</h2>
+							<h2>What kind of tools I use?</h2>
 						</div>
-						<div class="col-md-3 col-sm-3 col-xs-6 skills-images_tools">
-							<div class="text-center">
-								<img src="img/bower.png" alt="bower logo">
+						<figure>
+							<div class="col-md-3 col-sm-3 col-xs-6 skills-images_tools">
+								<div class="text-center">
+									<img src="img/bower.png" alt="bower logo">
+								</div>
 							</div>
-						</div>
-						<div class="col-md-3 col-sm-3 col-xs-6 skills-images_tools">
-							<div class="text-center">
-								<img src="img/gulp.png" alt="gulp logo">	
+						</figure>
+						<figure>
+							<div class="col-md-3 col-sm-3 col-xs-6 skills-images_tools">
+								<div class="text-center">
+									<img src="img/gulp.png" alt="gulp logo">	
+								</div>
 							</div>
-						</div>
-						<div class="col-md-3 col-sm-3 col-xs-6 skills-images_tools">
-							<div class="text-center">
-								<img src="img/nodejs-npm.png" alt="nodejs-npm logo">
+						</figure>
+						<figure>
+							<div class="col-md-3 col-sm-3 col-xs-6 skills-images_tools">
+								<div class="text-center">
+									<img src="img/nodejs-npm.png" alt="nodejs-npm logo">
+								</div>
 							</div>
-						</div>
-						<div class="col-md-3 col-sm-3 col-xs-6 skills-images_tools">
-							<div class="text-center">
-								<img src="img/photoshop.png" alt="photoshop logo">
+						</figure>
+						<figure>
+							<div class="col-md-3 col-sm-3 col-xs-6 skills-images_tools">
+								<div class="text-center">
+									<img src="img/photoshop.png" alt="photoshop logo">
+								</div>
 							</div>
-						</div>
+							</figure>
 					</div>	
 				</div>
 			</section>
@@ -247,7 +281,9 @@
 				<div class="row contact-margin_reduction">
 					<div class="col-md-12 aboutMe-title">
 						<div class="text-center contact-title">
-							<h2>contact</h2>
+							<header>
+								<h2>contact</h2>	
+							</header>
 						</div>
 					</div>
 				</div>
@@ -263,8 +299,8 @@
 					<div class="col-md-6">
 						<div class="contact-form_styles">
 							<form action="?" method="post">
-								<input id="name" class="nameAndSurname" type="text" placeholder="Name and surname">
-								<input class="email" type="email" placeholder="e-mail">
+								<input id="name" class="nameAndSurname pull-left" type="text" placeholder="Name and surname">
+								<input class="email pull-right" type="email" placeholder="e-mail">
 								<textarea name="" id="" placeholder="..."></textarea>
 								<div class="text-center">
 									<input type="submit" value="submit" class="submit">				
