--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -42,11 +42,11 @@
 						<div class="row content-margin_reduction">
 							<div class="col-md-12">
 								<div class="text-center content-intro">
-									<h1>Marcin Koczorowski</h1>
-									<h2>Junior Front - End Developer</h2>
+									<h1>Lorem ipsum dolor</h1>
+									<h2>Lorem ipsum dolor sit amet</h2>
 								</div>
 								<div class="text-center content-styles-2">			
-									<h2><q>If You know You can do better, then do better</q></h2>
+									<h2><q>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis, quo.</q></h2>
 								</div>
 							</div>
 						</div>
@@ -75,11 +75,11 @@
 						<div class = "projects__img">
 							<div class="photo">
 								<div class="woop">
-									<div class="text"><a href="#">check</a></div>
+									<div class="text"><a href="#">lorem</a></div>
 								</div>
 							</div>
 							<div class="text-inside">		
-								<h2>Mockup</h2>
+								<h2>Lorem ipsum.</h2>
 							</div>
 						</div>
 					</div>
@@ -88,11 +88,11 @@
 						<div class = "projects__img">
 							<div class="photo2">
 								<div class="woop">
-									<div class="text"><a href="#">check</a></div>
+									<div class="text"><a href="#">lorem</a></div>
 								</div>
 							</div>
 							<div class="text-inside">		
-								<h2>Guesser</h2>
+								<h2>Lorem ipsum.</h2>
 							</div>
 						</div>
 					</div>
@@ -101,11 +101,11 @@
 						<div class = "projects__img">
 							<div class="photo3">
 								<div class="woop">
-									<div class="text"><a href="#">check</a></div>
+									<div class="text"><a href="#">lorem</a></div>
 								</div>
 							</div>
 							<div class="text-inside">		
-								<h2>One Page website</h2>
+								<h2>Lorem ipsum dolor.</h2>
 							</div>
 						</div>	
 					</div>
@@ -114,11 +114,11 @@
 						<div class = "projects__img">
 							<div class="photo3">
 								<div class="woop">
-									<div class="text"><a href="#">check</a></div>
+									<div class="text"><a href="#">lorem</a></div>
 								</div>
 							</div>
 							<div class="text-inside">		
-								<h2>Portfolio for XYZ</h2>
+								<h2>Lorem ipsum.</h2>
 							</div>
 						</div>	
 					</div>
@@ -133,15 +133,15 @@
 							<div class="sub">About me<span class="arch"></span></div>
 						</header>
 						<article>
-							<p>My name is Marcin Koczorowski</p>
+							<p>Lorem ipsum dolor sit amet.</p>
 
-							<p>I am student of the Information Technology faculty at the Collegium Da Vinci in Poznań.</p>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro, quas!</p>
 
-							<p>I am passionate about programming of web applications, I focusing mainly on study AngularJS framework. My target is to become a professional programer.</p>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis alias et esse suscipit illum dolorem distinctio, natus repudiandae laudantium necessitatibus.</p>
 
-							<p>I know english in comunicative level. Between 2014 - 2016 I cooperated with contractors from aboard. I have an experience as a coach because I was responible for training new people employed to the company I worked in.</p>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita cupiditate natus saepe, animi vero voluptatum doloremque dolorum officia consectetur aut laboriosam ipsum, provident rem obcaecati voluptatibus!</p>
 
-							<p>I am open for relocation and business trips.</p>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, suscipit?</p>
 						</article>
 					</div>
 				</div>
@@ -152,7 +152,7 @@
 					<div class="col-md-12 skills-title">
 						<div class="text-center">
 							<header>
-								<h2>skills</h2>
+								<h2>lorem</h2>
 							</header>
 						</div>
 					</div>
@@ -160,16 +160,16 @@
 				<div class="row skills-margin_reduction">
 					<div class="col-md-12 skills-whatCanIDo">
 						<div class="text-center">
-							<h2>What can I do for You?</h2>
+							<h2>Lorem ipsum dolor sit amet.</h2>
 							<ul class="list-group">
 								<hr>
-								<li class="list-group-item">create responsive website</li>
+								<li class="list-group-item">Lorem ipsum dolor sit.</li>
 								<hr>
-								<li class="list-group-item">create single page apliccation</li>
+								<li class="list-group-item">Lorem ipsum dolor sit. apliccation</li>
 								<hr>
-								<li class="list-group-item">create one page website</li>
+								<li class="list-group-item">Lorem ipsum dolor sit. website</li>
 								<hr>
-								<li class="list-group-item">create website based on delivered graphic template</li>
+								<li class="list-group-item">Lorem ipsum dolor sit amet, consectetur adipisicing.</li>
 								<hr>
 							</ul>
 						</div>
@@ -177,7 +177,7 @@
 				</div>
 				<div class="row skills-margin_reduction">
 					<div class="text-center skills-header-technologies">
-						<h2>What kind of technologies I use?</h2>
+						<h2>Lorem ipsum dolor sit amet, consectetur.</h2>
 					</div>
 					<div class="skills-images">
 						<figure>
@@ -243,7 +243,7 @@
 				<div class="row skills-margin_reduction">
 					<div class="col-md-12 skills-images2">	
 						<div class="text-center skills-header-tools">
-							<h2>What kind of tools I use?</h2>
+							<h2>Lorem ipsum dolor sit amet.</h2>
 						</div>
 						<figure>
 							<div class="col-md-3 col-sm-3 col-xs-6 skills-images_tools">
@@ -282,7 +282,7 @@
 					<div class="col-md-12 aboutMe-title">
 						<div class="text-center contact-title">
 							<header>
-								<h2>contact</h2>	
+								<h2>lorem</h2>	
 							</header>
 						</div>
 					</div>
@@ -290,7 +290,7 @@
 				<div class="row contact-margin_reduction">
 					<div class="col-md-12">
 						<div class="text-center contact-header">
-							<h3>If You are interested to cooperate with me, please feel free to contact me using the online contact form or by phone</h3>
+							<h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia esse sunt recusandae non tempore. Officia!</h3>
 							<hr>
 						</div>
 					</div>
@@ -310,7 +310,7 @@
 					</div>
 					<div class="col-md-6 contact-social">
 						<div class="text-center contact-social_header">
-							<h1>Check out social media</h1>
+							<h1>Lorem ipsum dolor sit.</h1>
 						</div>
 						<div class="text-center contact-social-icons-styles">
 							<i class="demo-icon icon-facebook-squared"></i> 
@@ -319,15 +319,15 @@
 							<hr>
 						</div>
 						<div class="contact-social-styles">
-							<h3><i class="demo-icon icon-mail"></i> contact.koczorowski@gmail.com</h3>
-							<h3><i class="demo-icon icon-phone"></i> Call me: 666-293-599</h3>
+							<h3><i class="demo-icon icon-mail"></i> contact.loremimsum@gmail.com</h3>
+							<h3><i class="demo-icon icon-phone"></i> Call me: 666-666-666</h3>
 						</div>
 					</div>
 				</div>				
 			</section>
 
 			<footer>
-				<p>&copy; Marcin Koczorowski - portfolio 2016 </p>
+				<p>&copy; Lorem ipsum. - Lorem ipsum dolor. 2016 </p>
 			</footer>
 
 		<!-- libraries -->
